# python-issue-sync-tool

./: .gitignore  MANIFEST.in  README.md  README.rst  dump_repository_config.py  genpackagedoc.py  pyproject.toml  requirements.txt
.github/workflows/: release_to_pypi.yml
IssueSyncTool/: __main__.py  rtc_client.py  sync_issue.py  tracker.py  user.py  utils.py  version.py
IssueSyncTool/config/: sync_config.json
IssueSyncTool/rtc-templates/: workitem.xml
additions/: CExtendedSetup.py
config/: CRepositoryConfig.py  repository_config.json
config/robotframework_aio/: release_items_IssueSyncTool.json  release_items_SyncIssue.json
packagedoc/: packagedoc_config.json
packagedoc/additional_docs/: Description.tex  History.tex  Introduction.tex
packagedoc/design/: activity.puml  requirements.rst  sequence.puml  usecase.puml
test/: test_Trackers.py  test_User.py  test_config_schema.py
